--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravelcollective/html": "^5.5",
         "spatie/laravel-permission": "^2.8",
         "yajra/laravel-datatables-buttons": "^3.0",
-        "yajra/laravel-datatables-oracle": "^8.0"
+        "yajra/laravel-datatables-oracle": "^8.0",
+        "maatwebsite/excel": "~2.1.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
