--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,16 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "barryvdh/laravel-dompdf": "^0.8.3",
         "fideloper/proxy": "~3.3",
+        "jeroennoten/laravel-adminlte": "^1.22",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "jeroennoten/laravel-adminlte": "^1.22",
         "laravelcollective/html": "^5.5",
+        "maatwebsite/excel": "~2.1.0",
         "spatie/laravel-permission": "^2.8",
         "yajra/laravel-datatables-buttons": "^3.0",
-        "yajra/laravel-datatables-oracle": "^8.0",
-        "maatwebsite/excel": "~2.1.0"
+        "yajra/laravel-datatables-oracle": "^8.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
