--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.5",
         "maatwebsite/excel": "~2.1.0",
+        "elibyy/tcpdf-laravel": "5.5.*",
         "spatie/laravel-permission": "^2.8",
         "yajra/laravel-datatables-buttons": "^3.0",
         "yajra/laravel-datatables-oracle": "^8.0"
