--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,6 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
-        "barryvdh/laravel-dompdf": "^0.8.3",
         "fideloper/proxy": "~3.3",
         "jeroennoten/laravel-adminlte": "^1.22",
         "laravel/framework": "5.5.*",
@@ -15,6 +14,7 @@
         "maatwebsite/excel": "~2.1.0",
         "elibyy/tcpdf-laravel": "5.5.*",
         "spatie/laravel-permission": "^2.8",
+        "riskihajar/terbilang": "^1.2",
         "yajra/laravel-datatables-buttons": "^3.0",
         "yajra/laravel-datatables-oracle": "^8.0"
     },
